2009-12-09
    * per channel state for banks, instruments, controllers
    * drums instrument  

2009-12-08
    * drums channel, new setting in preferences dialog

2009-12-07
    * extra controls: new button types

2009-12-06
    * moved the "show note names" option from preferences dialog to view menu
    
2009-11-28
    * French translation, by Frank Kober
    * updated German translation

2009-11-09
    * Russian translation, by Serguey G Basalaev

2009-09-27
    * Release 0.3.0

2009-09-25
    * Release candidate 3
    * Fix the extra controllers toolbar

2009-09-24
    * Release candidate 2
    * Mac OS X polishing and consistency fixes

2009-09-21
    * Release candidate 1
    * build system updates
    * fixed interaction for extra controllers

2009-09-16
    * merged vpiano 0.8 widget
    * implemented RFE #2848623: Raw keyboard support, raw Keyboard Map editor
    * implemented RFE #2790324 extra controls tool bar: new extra controllers 
      (knobs and on/off buttons with customizable labels) which can be assigned 
      to arbitrary MIDI controllers.
    * implemented RFE #2106022 better looking keys using SVG graphics.

2009-08-31
    * Fix RtMidiOut port type flags

2009-08-25
    * German translation, by Andreas Steinel

2009-08-03
    * release 0.2.6

2009-08-02
    * merged vpiano 0.7 widget
    * implemented RFE #2109421: new preferences option: show note names
    * implemented RFE #2209692: new toolbar control: transpose in semitones

2009-07-28
    * merged RtMIDI 1.0.10

2009-06-08
    * check for Qt version >= 4.4.0
    * updated documentation

2009-06-07
    * fixed release/grab keyboard and SoundFont import dialog

2009-06-07
    * private development files excluded from the tarball
    * don't install documents, leave it to packagers
    * removed shebang from the txt2ins.awk script
    * man page, by Mehdi Dogguy. Thanks!

2009-05-31
    * release 0.2.5

2009-05-30
    * Spanish help file translated.

2009-05-28